--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "concurrently -n \"WEB,PARSER\" -c \"cyan,magenta\" \"cross-env NODE_ENV=development tsx server/index.ts\" \"cd parser-service && uvicorn main:app --reload --port 8000\"",
     "build": "tsx script/build.ts",
-    "start": "cross-env NODE_ENV=production node dist/index.cjs",
+    "start": "pm2 start ecosystem.config.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
@@ -113,6 +113,7 @@
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
     "esbuild": "^0.25.0",
+    "pm2": "^6.0.14",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
